# pype

./: README.md  pyproject.toml
src/pype/: __init__.py  partitioner.py
